[gd_scene load_steps=21 format=2]

[ext_resource path="res://enemies/BOSS-full.png" type="Texture" id=1]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/BOSS-body.png" type="Texture" id=3]
[ext_resource path="res://enemies/BOSS-left-upper-arm.png" type="Texture" id=4]
[ext_resource path="res://enemies/BOSS-wing-right.png" type="Texture" id=5]
[ext_resource path="res://enemies/BOSS-right-lower-arm.png" type="Texture" id=6]
[ext_resource path="res://enemies/BOSS-left-lower-arm.png" type="Texture" id=7]
[ext_resource path="res://enemies/BOSS-wing-left.png" type="Texture" id=8]
[ext_resource path="res://enemies/BOSS-right-upper-arm.png" type="Texture" id=9]
[ext_resource path="res://enemies/BOSS-head.png" type="Texture" id=10]
[ext_resource path="res://enemies/Boss.gd" type="Script" id=11]
[ext_resource path="res://CollisionBoxes/Hitbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://enemies/enemiesoof.tres" type="Animation" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0907

[sub_resource type="Animation" id=2]
resource_name = "FLY"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body/wing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -10 ), Vector2( -7, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/wing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 44.9999, -44.9999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/wing2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, -10 ), Vector2( 7, -7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/wing2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 44.9999 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.33333 ), Vector2( 0, 0.428571 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("body/leg2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body/leg4:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 2.72758 ), Vector2( 9, 2.72758 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body/leg4:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15.0, -15.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body/leg:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -2.06591 ), Vector2( -8, -2.06591 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("body/leg:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("body/leg3:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -2 ), Vector2( 8, -2 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("body/leg3:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("body/wing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/wing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/leg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/leg3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/leg3:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("body:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body/leg2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body/leg2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("body/wing2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("body/wing2:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("body/head:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("body/head:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("body/leg4:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("body/leg4:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 14.0357

[sub_resource type="CircleShape2D" id=5]
radius = 9.05539

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.98106, 7.92169 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.80683, 6.02759 )

[node name="Boss" instance=ExtResource( 2 )]
position = Vector2( 32, 33 )
script = ExtResource( 11 )
MAX_SPEED = 30

[node name="Sprite" parent="." index="0"]
modulate = Color( 0.266667, 0.509804, 0.682353, 0.176471 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "FLY"
anims/FLY = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Hitbox" parent="." index="3"]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 17 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." index="4"]
visible = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, 21 )
shape = SubResource( 5 )

[node name="EnemyStats" parent="." index="5"]
max_health = 90
health = 90

[node name="body" type="Sprite" parent="." index="6"]
texture = ExtResource( 3 )

[node name="head" type="Sprite" parent="body" index="0"]
position = Vector2( 0, 1.20408 )
texture = ExtResource( 10 )

[node name="wing" type="Sprite" parent="body" index="1"]
position = Vector2( -7, -10 )
rotation = 0.785396
texture = ExtResource( 8 )
offset = Vector2( 4, 9 )

[node name="wing2" type="Sprite" parent="body" index="2"]
position = Vector2( 7, -10 )
rotation = -0.785398
texture = ExtResource( 5 )
offset = Vector2( -4, 9 )

[node name="leg" type="Sprite" parent="body" index="3"]
position = Vector2( -8, -2.06591 )
rotation = 0.523599
texture = ExtResource( 4 )
offset = Vector2( 8, 2.06591 )

[node name="leg2" type="Sprite" parent="body" index="4"]
position = Vector2( -9, 2.72758 )
texture = ExtResource( 7 )
offset = Vector2( 9, -2.72758 )

[node name="Hitbox" parent="body/leg2" index="0" instance=ExtResource( 12 )]
collision_mask = 4

[node name="CollisionShape2D" parent="body/leg2/Hitbox" index="0"]
position = Vector2( -7.80062, 14.6734 )
rotation = 0.785397
shape = SubResource( 6 )

[node name="leg3" type="Sprite" parent="body" index="5"]
position = Vector2( 8, -2 )
rotation = -0.523599
texture = ExtResource( 9 )
offset = Vector2( -8, 2 )

[node name="leg4" type="Sprite" parent="body" index="6"]
position = Vector2( 9, 2.72758 )
rotation = -0.15708
texture = ExtResource( 6 )
offset = Vector2( -9, -2.72758 )

[node name="Hitbox" parent="body/leg4" index="0" instance=ExtResource( 12 )]
collision_mask = 4

[node name="CollisionShape2D" parent="body/leg4/Hitbox" index="0"]
position = Vector2( 6.75467, 14.221 )
rotation = 0.785397
shape = SubResource( 7 )

[node name="FireTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
autostart = true

[node name="Muzzle" type="Position2D" parent="." index="8"]
position = Vector2( 0, 32 )

[node name="BombTimer" type="Timer" parent="." index="9"]
wait_time = 4.0
autostart = true

[node name="HitPlayer" type="AnimationPlayer" parent="." index="10"]
playback_speed = 1.4
anims/oof = ExtResource( 13 )
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="body/leg2/Hitbox"]

[editable path="body/leg4/Hitbox"]
